--- a/pkt_gen/Makefile
+++ b/pkt_gen/Makefile
@@ -2,8 +2,8 @@ include /usr/local/etc/PcapPlusPlus.mk
 
 # All Target
 all:
-	g++ $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -c -o main.o main.cpp
-	g++ $(PCAPPP_LIBS_DIR) -static-libstdc++ -o Bin main.o $(PCAPPP_LIBS)
+	g++ -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -c -o main.o main.cpp
+	g++ -std=c++11 $(PCAPPP_LIBS_DIR) -static-libstdc++ -o Bin main.o $(PCAPPP_LIBS)
 	rm main.o
 
 # Clean Target
