Integrate C++ CMS with pcap++ reader

--- a/cms/Makefile
+++ b/cms/Makefile
@@ -1,2 +1,12 @@
-countminsketch: count_min_sketch.cpp count_min_sketch_test.cpp
-	g++ -o countmin count_min_sketch.cpp count_min_sketch_test.cpp
+include ~/Documents/PcapPlusPlus/mk/PcapPlusPlus.mk
+
+# All Target
+all:
+	g++ -std=c++11 $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -c -o main.o main.cpp
+	g++ -std=c++11 $(PCAPPP_LIBS_DIR) -static-libstdc++ -o Bin main.o count_min_sketch.cpp $(PCAPPP_LIBS)
+	rm main.o
+
+# Clean Target
+clean:
+	rm main.o
+	rm Bin
